Clean up backend code
