# backend/api-spec.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "My API",
+    "title": "Announcements API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
   "host": "localhost:3000",
@@ -41,41 +41,12 @@
             "description": "OK"
           }
         }
-      },
-      "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
       }
     },
-    "/users/": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/customers/": {
+    "/api/announcements/": {
       "get": {
         "tags": [
-          "Customers"
+          "Announcements"
         ],
         "description": "",
         "parameters": [],
@@ -84,10 +55,12 @@
             "description": "OK"
           }
         }
-      },
+      }
+    },
+    "/api/announcements/create/": {
       "post": {
         "tags": [
-          "Customers"
+          "Announcements"
         ],
         "description": "",
         "parameters": [
@@ -97,16 +70,28 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "apps": {
                   "example": "any"
                 },
-                "age": {
+                "body": {
+                  "example": "any"
+                },
+                "buttonColor": {
+                  "example": "any"
+                },
+                "buttonText": {
+                  "example": "any"
+                },
+                "buttonUrl": {
+                  "example": "any"
+                },
+                "endDate": {
+                  "example": "any"
+                },
+                "startDate": {
                   "example": "any"
                 },
                 "title": {
-                  "example": "any"
-                },
-                "company": {
                   "example": "any"
                 }
               }
@@ -116,19 +101,49 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/customers/{id}": {
+    "/api/announcements/delete/{id}": {
+      "delete": {
+        "tags": [
+          "Announcements"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/api/announcements/{slug}": {
       "get": {
         "tags": [
-          "Customers"
+          "Announcements"
         ],
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "slug",
             "in": "path",
             "required": true,
             "type": "string"
@@ -137,47 +152,20 @@
         "responses": {
           "200": {
             "description": "OK"
-          }
-        }
-      }
-    },
-    "/customers/updateName/{id}": {
-      "put": {
-        "tags": [
-          "Customers"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
           },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/customers/resetAges": {
-      "post": {
+    "/api/apps/": {
+      "get": {
         "tags": [
-          "Customers"
+          "Apps"
         ],
         "description": "",
         "parameters": [],
